test/functions/iterators/errors/badArgs.bad
$CHPL_HOME/modules/internal/ChapelIteratorSupport.chpl:176: internal error: FUN3616 chpl Version 1.16.0 pre-release (b99bdb1)

Internal errors indicate a bug in the Chapel compiler ("It's us, not you"),
and we're sorry for the hassle.  We would appreciate your reporting this bug -- 
please see http://chapel.cray.com/bugs.html for instructions.  In the meantime,
the filename + line number above may be useful in working around the issue.

